--- a/views/skills.ejs
+++ b/views/skills.ejs
@@ -1,4 +1,4 @@
-<%- include("includes/header.ejs", {title:"Current Skills"}); %>
+<%- include("../includes/header.ejs", {title:"Current Skills"}); %>
 
   <div class='container'>
       <div class='table-responsive'>
@@ -25,8 +25,39 @@
       </div>
   </div>
 
+<div class='container'>
+    <div class='jumbotron'>
+        <form action='/skills/insert' method='POST'>
+            <div class='form-group'>
+                <label> skill_name </label>
+                <input type='text' name='skill[skill_name]' class='form-control' placeholder='skill_name'>
+            </div>
+            <div class='form-group'>
+                <label> description</label>
+                <input type='text' name='skill[description]' class='form-control' placeholder='description'>
+            </div>
+            <button type='submit' class='btn btn-primary center-block'>Submit</button>
+        </form>
+    </div>
+</div>
+
+<div class='container'>
+    <div class='jumbotron'>
+        <form action='/skills/insert/item' method='POST'>
+            <div class='form-group'>
+                <label> skill_name </label>
+                <input type='text' name='skill[skill_name]' class='form-control' placeholder='skill_name'>
+            </div>
+            <div class='form-group'>
+                <label> skill id</label>
+                <input type='text' name='skill[skill_id]' class='form-control' placeholder='skill_id'>
+            </div>
+            <button type='submit' class='btn btn-primary center-block'>Submit</button>
+        </form>
+    </div>
+</div>
 <p></p>
 <a href="/">Home</a>
 <p></p>
 
-<%- include("includes/footer.ejs"); %>
+<%- include("../includes/footer.ejs"); %>
