almost got it all to work

--- a/views/schoolall.ejs
+++ b/views/schoolall.ejs
@@ -1,6 +1,6 @@
 <%- include("includes/header.ejs", {title:"All Schools"}); %>
 
-
+<a href="/account/add">Add New School</a> <br />
 <div class='container'>
     <div class='table-responsive'>
         <h3> School </h3>
