--- a/views/account/accountUpdate.ejs
+++ b/views/account/accountUpdate.ejs
@@ -3,26 +3,32 @@
 <h1>Update <%= account.email%></h1>
 <form action="/account/update" method="get">
     <input type="hidden" id="account_id" name="account_id" value="<%= account.account_id %>">
-    Email: <input id="account_name" name="email" type="text" value="<%= account.email%>"/>
+    Email: <input id="email" name="email" type="text" value="<%= account.email%>"/>
     <br />
     <br />
-    Address <br />
-    <select id="address_id" name="address_id" multiple="multiple">
-        <% for(var i=0; address.length > i; i++ ) {
+    <input type="hidden" id="account_id" name="account_id" value="<%= account.account_id %>">
+    First Name: <input id="account" name="first_name" type="text" value="<%= account.first_name%>"/>
+    <br />
+    <input type="hidden" id="account_id" name="account_id" value="<%= account.account_id %>">
+    Last Name: <input id="account" name="last_name" type="text" value="<%= account.last_name%>"/>
+    <br />
+    Schools <br />
+    <select id="school_id" name="school_id" multiple="multiple">
+        <% for(var i=0; school.length > i; i++ ) {
             var selected = "";
 
-            if(address[i].account_id != null) {
+            if(school[i].account_id != null) {
                 selected = "selected";
             }
         %>
-        <option value="<%= address[i].address_id %>" <%= selected %> ><%= address[i].street + ', ' + address[i].zip_code %></option>
+        <option value="<%= school[i].school_id %>" <%= selected %> ><%= school[i].school_name %></option>
         <% } %>
     </select>
 
     <!-- Initialize the multiselect plugin: -->
     <script type="text/javascript">
         $(document).ready(function() {
-            $('#address_id').multiselect();
+            $('#school_id').multiselect();
         });
     </script>
 
