--- a/views/account/accountall.ejs
+++ b/views/account/accountall.ejs
@@ -1,4 +1,3 @@
-
 <%- include("../includes/header.ejs", {title:"Current Accounts"}); %>
 
 
@@ -11,7 +10,7 @@
             <tr><th>Email</th><th>Actions</th></tr>
             <% account.forEach((res) => { %>
             <tr class='active'>
-                <td><a href='/account/all/<%=res.account_id %>'><%= res.email %></a></td>
+                <td><a href='/account/?account_id=<%=res.account_id %>'><%= res.email %></a></td>
                 <td><button onclick="event.preventDefault();window.location.href='/account/edit4/?account_id=<%=res.account_id %>'">Edit</button></td>
                 <td><a href='/account/delete/<%=res.account_id %>'>Delete</a></td>
             </tr>
@@ -42,6 +41,7 @@
 
 <div class='container'>
     <div class='jumbotron'>
+        <h1>Insert</h1>
         <form action='/account/insert' method='POST'>
             <div class='form-group'>
                 <label> Email </label>
@@ -62,6 +62,7 @@
 
 <div class='container'>
     <div class='jumbotron'>
+        <h1>Update</h1>
         <form action='/account/edit' method='POST'>
             <div class='form-group'>
                 <label> AccountID </label>
